--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@capacitor/core": "2.4.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
@@ -15,12 +16,18 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.1.3",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "ionicons": "^5.0.0",
+    "nhost-js-sdk": "^2.2.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-nhost": "^2.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.2.0",
     "typescript": "3.8.3"
   },
   "scripts": {
