--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.1.4",
+    "@capacitor-community/react-hooks": "0.0.11",
     "@capacitor/core": "2.4.0",
+    "@capacitor/ios": "^2.4.0",
+    "@ionic/pwa-elements": "^3.0.1",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,8 +23,8 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "ionicons": "^5.0.0",
-    "nhost-js-sdk": "^2.2.3",
-    "react": "^16.13.0",
+    "nhost-js-sdk": "^2.2.4",
+    "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-nhost": "^2.0.1",
     "react-router": "^5.1.2",
@@ -52,7 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.0"
+    "@capacitor/cli": "2.4.0",
+    "eslint-plugin-react-hooks": "^4.1.2"
   },
   "description": "An Ionic project"
 }
